plugins {
    id 'java'
    id 'java-test-fixtures' // Include this plugin if you need test fixtures support
}

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
}

test {
    useJUnitPlatform()
    testLogging {
        events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

task run(type: JavaExec) {
    main = 'wordSquare.Main'
    classpath = sourceSets.main.runtimeClasspath
    if (project.hasProperty('args')) {
        args project.args.split()
    } else {
        args []
    }
}
